<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
    <TextView  
	
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/informationtext"
    />
<Button     
 	android:id="@+id/getmodebutton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/getcurrentmode" ></Button>
<Button     
 	android:id="@+id/changemodebutton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/switchtomode_normal" ></Button>
    
<Button     
 	android:id="@+id/changemodebutton1"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/switchtomode_volume" ></Button>

<Button     
 	android:id="@+id/reconnecttodaemon"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/restartservice" ></Button>
    
</LinearLayout>
